<resources>
    // Nome do APP
    <string name="app_name"> Vital + </string>

    //Strings Teste
    <string name="teste"> Cadastro </string>

    //Strings do menu
    <string name="exame"> Exames </string>
    <string name="agenda"> Agenda </string>
    <string name="cadastro"> Cadastro </string>
    <string name="dependente">Dependentes </string>

    //String Crud
    <string name="salvar">Salvar</string>
    <string name="deletar">Deletar</string>
    <string name="editar">Editar</string>
    <string name="atualizar">Atualizar</string>


    //Strings do Exames
    <string name="cadastrar_exame"> Novo Exame </string>

    //Strings Form Exames
    <string name="f.especialidade"> Especialidade: </string>
    <string name="f.data"> Data: </string>
    <string name="f.local"> Local: </string>
    <string name="f.procedimento"> Procedimento: </string>
    <string name="f.anexo"> Anexo: </string>


    //Strings do Agendamentos
    <string name="cadastrar_agendamento"> Novo Agendamento </string>

    //Strings Form Agendamento
    <string name="ag.especialidade"> Especialidade: </string>
    <string name="ag.data"> Data: </string>
    <string name="ag.hora"> Hora: </string>
    <string name="ag.local"> Local: </string>
    <string name="ag.procedimento"> Procedimento: </string>

    //Strings do Cadastro
    <string name="atualizar_cadastro"> Atualizar Cadastro </string>"
    <string name="medicamentos"> Medicamentos </string>
    <string name="alergias"> Alergias </string>

    //Strings Form Cadastro
    <string name="CadNome">Nome:</string>
    <string name="CadSexo">Sexo:</string>
    <string name="CadMasculino">Masculino</string>
    <string name="CadFeminino">Feminino</string>
    <string name="CadNascimento">Data de Nascimento:</string>
    <string name="CadCPF">CPF:</string>
    <string name="CadEndereco">Endereço:</string>
    <string name="CadCEP">CEP:</string>
    <string name="CadTelefone">Telefone:</string>
    <string name="CadEmail">Email:</string>
    <string name="CadSus">Número SUS:</string>
    <string name="CadPlanoSaude">Plano de Saúde:</string>
    <string name="CadNumPlanoSaude">Número do Plano de Saúde:</string>
    <string name="CadTipoSanguineo">Tipo Sanguíneo:</string>
    <string name="CadSenha"> Senha </string>
    <string name="CadSalvar">Salvar</string>

    //Trocar os Hints por Strings
    <string-array name="tipos_sanguineos">
        <item>A+</item>
        <item>A-</item>
        <item>B+</item>
        <item>B-</item>
        <item>AB+</item>
        <item>AB-</item>
        <item>O+</item>
        <item>O-</item>
        <item>Não informado</item>
    </string-array>


    //string de Medicamentos
    <string name="med.novo"> Novo Medicamento </string>">

    //Strings Form Medicamentos
    <string name="med.nome"> Nome: </string>
    <string name="med.duracao"> Duração: </string>
    <string name="med.dose"> Dose: </string>">
    <string name="med.intervalo"> Intervalo: </string>
    <string name="med.salvar"> Salvar </string>

    //Arrays para M
    <string-array name="med_duracao">
        <item>1 Dia</item>
        <item>2 Dias</item>
        <item>3 Dias</item>
        <item>4 Dias</item>
        <item>5 Dias</item>
        <item>7 Dias</item>
        <item>15 Dias</item>
        <item>30 Dias</item>
        <item>60 Dias </item>
        <item>90 Dias</item>
        <item>Continuo</item>
        <item>Não Determinado</item>
    </string-array>

    <string-array name="med_intervalo">
        <item>A Cada 4 Horas  </item>
        <item>A Cada 6 Horas  </item>
        <item>A Cada 8 Horas  </item>
        <item>A Cada 12 Horas </item>
        <item>Uma Vez ao Dia </item>
        <item>Ao Acordar </item>
        <item>No Almoço </item>
        <item>Antes de Dormir </item>
        <item>Não Determinado</item>
    </string-array>

    //Strings Alergias
    <string name="alergia.novo"> Nova Alergia </string>
    //Strings Form Alergias
    <string name="alergia.nome"> Nome Alergia: </string>
    <string name="alergia.salvar"> Salvar </string>

    //Mensagens
    <string name="msg.sucesso"> Cadastrado com Sucesso! </string>
    <string name="msg.erro"> Erro no Cadastro! </string>

    <string name="delete_sucesso"> Deletado com Sucesso! </string>
    <string name="delete_erro"> Erro ao deletar! </string>

    <string name="update_sucesso"> Atualizado com Sucesso! </string>
    <string name="update_erro"> Erro ao atualizar! </string>

    <!-- Login -->
    <string name="login"> Faça o Login </string>
    <string name="username"> Usuario </string>
    <string name="password"> Senha </string>
    <string name="btn_login"> Login </string>
    <string name="btn_registro"> Registrar </string>
    <string name="btn_biometria"> Login com Biometria </string>
    <string name="login_sucesso"> Login realizado com sucesso! </string>
    <string name="login_erro"> Erro no Login! </string>
    <string name="preencha_campos">Preencha os Campos </string>
    <string name="usuario_nao_encontrado">Usuario Não Encontrado</string>
    <string name="senha_invalida">Senha Invalida</string>


</resources>