<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.projetovital.cadastro.CadastroFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/cadastro"
            android:textAlignment="center"
            android:textSize="36sp"
            android:textStyle="bold" />

        <!-- Botão Provisorio Para testes de Cadastro -->
        <Button
            android:id="@+id/btn_Atualizar_Cadastro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/teste"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold" />

        <!-- Botão Para Exibir os Medicamentos -->
        <Button
            android:id="@+id/btn_Medicamentos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/medicamentos"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold" />

        <!-- Botão Para Exibir as Alergias -->
        <Button
            android:id="@+id/btn_Alergias"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/alergias"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold" />


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <!-- Nome -->
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="4dp"
                    android:text="@string/CadNome"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvCadastroNome"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="4dp"
                    android:textSize="18sp"
                    tools:text="Gabriel Veras Sousa de Carvalho" />

                <!-- Sexo -->
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="4dp"
                    android:text="@string/CadSexo"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvCadastroSexo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="4dp"
                    android:textSize="18sp"
                    tools:text="Gabriel Veras Sousa de Carvalho" />

                <!-- Nascimento -->
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="4dp"
                    android:text="@string/CadNascimento"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvCadastroDataNascimento"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="4dp"
                    android:textSize="18sp"
                    tools:text="08/12/1998" />

                <!-- CPF -->
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="4dp"
                    android:text="@string/CadCPF"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvCadastroCPF"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="4dp"
                    android:textSize="18sp"
                    tools:text="396.426.938-79 " />

                <!-- Endereço -->
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="4dp"
                    android:text="@string/CadEndereco"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvCadastroEndereco"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="4dp"
                    android:textSize="18sp"
                    tools:text="Rua Leopoldo Figueireido, 39 " />

                <!-- CEP -->
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="4dp"
                    android:text="@string/CadCEP"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvCadastroCEP"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="4dp"
                    android:textSize="18sp"
                    tools:text="04223-070" />

                <!-- Telefone -->
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="4dp"
                    android:text="@string/CadTelefone"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvCadastroTelefone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="4dp"
                    android:textSize="18sp"
                    tools:text="(11) 98509-5610" />

                <!-- Email -->
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="4dp"
                    android:text="@string/CadEmail"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvCadastroEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="4dp"
                    android:textSize="18sp"
                    tools:text="Email: " />

                <!-- Sus -->
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="4dp"
                    android:text="@string/CadSus"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvCadastroNumeroSUS"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="4dp"
                    android:textSize="18sp"
                    tools:text="N° Sus: " />

                <!-- Plano de Saude -->
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="4dp"
                    android:text="@string/CadPlanoSaude"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvCadastroPlanoSaude"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="4dp"
                    android:textSize="18sp"
                    tools:text="Amil " />

                <!-- Plano de Saude -->
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="4dp"
                    android:text="@string/CadNumPlanoSaude"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvCadastroNumeroPlanoSaude"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="4dp"
                    android:textSize="18sp"
                    tools:text="40028922 " />

                <!-- Plano de Saude -->
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="4dp"
                    android:text="@string/CadNumPlanoSaude"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvCadastroTipoSanguineo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="4dp"
                    android:textSize="18sp"
                    tools:text="Tipo Sanguineo: " />

                <Button
                    android:id="@+id/btnCadAtualizar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/atualizar"
                    android:textAlignment="center"
                    android:textStyle="bold" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</ScrollView>
