<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.projetovital.cadastro.FormCadastroFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/cadastro"
            android:textAlignment="center"
            android:textColor="@color/blue"
            android:textSize="48sp"
            android:textStyle="bold" />

        <!-- Nome -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputEtUserNome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/item_texto">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etUserNome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/CadNome"
                android:inputType="text"
                android:padding="16dp"
                android:textColor="@color/item_texto" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Sexo -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/CadSexo"
            android:textSize="16sp"
            android:textColor="@color/item_texto"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputEtUserSexo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/item_texto">

            <RadioGroup
                android:id="@+id/etUserSexo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="8dp">

                <RadioButton
                    android:id="@+id/rbMasculino"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text="@string/CadMasculino"
                    android:textColor="@color/item_texto"
                    android:value="M" />

                <RadioButton
                    android:id="@+id/rbFeminino"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text="@string/CadFeminino"
                    android:textColor="@color/item_texto"
                    android:value="F" />
            </RadioGroup>
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Data de Nascimento -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputEtUserNascimento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/item_texto">

            <EditText
                android:id="@+id/etUserNascimento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/CadNascimento"
                android:focusable="false"
                android:inputType="none"
                android:padding="16dp"
                android:textColor="@color/item_texto"
                android:textColorHint="@color/item_texto" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- CPF -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputEtUserCpf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/item_texto">

            <EditText
                android:id="@+id/etUserCpf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/CadCPF"
                android:inputType="number"
                android:maxLength="14"
                android:padding="16dp"
                android:textColor="@color/item_texto"
                android:textColorHint="@color/item_texto" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Endereço -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputEtUserEndereco"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/item_texto">

            <EditText
                android:id="@+id/EtUserEndereco"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/CadEndereco"
                android:inputType="text"
                android:padding="16dp"
                android:textColor="@color/item_texto"
                android:textColorHint="@color/item_texto" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- CEP -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputEtUserCep"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/item_texto">

            <EditText
                android:id="@+id/EtUserCep"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/CadCEP"
                android:inputType="number"
                android:maxLength="9"
                android:padding="16dp"
                android:textColor="@color/item_texto"
                android:textColorHint="@color/item_texto" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Telefone -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputEtUserTelefone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/item_texto">

            <EditText
                android:id="@+id/EtUserTelefone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/CadTelefone"
                android:inputType="phone"
                android:maxLength="15"
                android:padding="16dp"
                android:textColor="@color/item_texto"
                android:textColorHint="@color/item_texto" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Email -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputEtUserEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/item_texto">

            <EditText
                android:id="@+id/EtUserEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/CadEmail"
                android:inputType="textEmailAddress"
                android:padding="16dp"
                android:textColor="@color/item_texto"
                android:textColorHint="@color/item_texto" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- N° Sus -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputEtUserSus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/item_texto">

            <EditText
                android:id="@+id/EtUserSus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/CadSus"
                android:inputType="number"
                android:padding="16dp"
                android:textColor="@color/item_texto"
                android:textColorHint="@color/item_texto" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Plano de Saúde -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputEtUserPlanoSaude"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/item_texto">

            <EditText
                android:id="@+id/EtUserPlanoSaude"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/CadPlanoSaude"
                android:inputType="text"
                android:padding="16dp"
                android:textColor="@color/item_texto"
                android:textColorHint="@color/item_texto" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- N° Plano de Saúde -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputEtUserNumPlanoSaude"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/item_texto">

            <EditText
                android:id="@+id/EtUserNumPlanoSaude"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/CadNumPlanoSaude"
                android:inputType="number"
                android:padding="16dp"
                android:textColor="@color/item_texto"
                android:textColorHint="@color/item_texto" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Tipo Sanguíneo -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/CadTipoSanguineo"
            android:textSize="16sp"
            android:textColor="@color/item_texto"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputSpinnerTipoSanguineo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/item_texto">

            <Spinner
                android:id="@+id/spinnerTipoSanguineo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Senha -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputEtUserSenha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/item_texto">

            <EditText
                android:id="@+id/EtUserSenha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/CadSenha"
                android:inputType="number"
                android:padding="16dp"
                android:textColor="@color/item_texto"
                android:textColorHint="@color/item_texto" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnCadSalvar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:backgroundTint="@color/blue_btn"
            android:text="@string/CadSalvar"
            android:textSize="18sp"
            android:textStyle="bold" />


    </LinearLayout>
</ScrollView>
